- Fix all endpoints with memory database - Add palindrome check - Allow missing values from requests to be ommited when saved - Allow selective field update - Allow paasing "null" as explicit zero time
